Resolve menu alignment settings with flex

--- a/style.less
+++ b/style.less
@@ -433,7 +433,8 @@ body {
 			}
 		}
 
-		.so-mobilenav-mobile {
+		.menu-mobilenav-container {
+			margin-right: 0;
 			margin-left: auto;
 		}
 
@@ -589,7 +590,8 @@ body.sidebar-position-none #secondary {
 
 			&.masthead-logo-in-menu {
 
-				.logo {
+				.logo,
+				.site-description {
 					margin-left: 20px;
 				}
 
